--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 Flask==2.3.2
-torch>=2.2.0
-pandas==2.0.3
-numpy==1.24.3
+torch==2.5.1+cu121
+pandas==2.2.2
+numpy==1.26.4
 scikit-learn==1.3.0
 matplotlib==3.7.2
 seaborn==0.12.2
 plotly==5.15.0
 werkzeug==2.3.6
 python-multipart==0.0.6
+gunicorn>=20.0.4
 setuptools>=65.5.0
 wheel>=0.41.0
